--- a/SeismicInterpolation.ipynb
+++ b/SeismicInterpolation.ipynb
@@ -11,12 +11,42 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "Interpolation is a long standing problem and most commercial solutions are based on Fourier or Radon transforms. Here we want \n",
+    "to investigate the feasibility of a an alternative, neural network based approach.\n",
+    "Seismic interpolation is usually carried out in 4 or 5 dimensions and often incorporates regularization. In this POC we use a \n",
+    "convolutional Autoencoder applied to 2D-seismic data. \n",
+    "- Two lines,one for training the other for test\n",
+    "\n",
+    "Principle: We feed the autoencder with data and match it to the output. howver, to be able to do interpolation we need to \n",
+    "    remove data from the seismic input while we leave the target unaltered. Typically missing data in seismic procesing is \n",
+    "    between 1 and 10 traces wide and therefore we cut out vertical stripes from out data that is up to 10 pixels/traces wide.\n",
+    "    Since, the target is unaltered, the model will have to opportunity to learn to tie the gappy data to the complete data. \n",
+    "    Having this generalised knowledged trained the VAE hopefully will be able to interpolated datra it has never seen before.\n",
+    "    "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# Code definition"
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we define two classes which will make our life easier when training the VAE. \n",
+    "The input/source and the output/target data for the VAE are not identical in this experiments since, as explained above, the \n",
+    "input data contains missing stripes, or traces in seismic jargon, that the VAE should fill in. The class Batch is a container class \n",
+    "that holds botht eh source and the target.\n",
+    "Utility is a class containg various mathods to generate the batches. *get_source_and_target* takes the seismic data, stored in a 800x200 numpy array and cuts out a random square of 28x28 elements. This element is normalised such that the values are in the inteval [0,1] and \n",
+    "the zero in the original array equals 1/2. Additionally a copy of the normalised 28x28 square is generated and a, at a probaboilty of 50% a chunck/verticalstripe up to 11 pixels wide is replaced with zeros. The latter square then is used to feed the VAE while the square containing all the data is used as target, such that the Autoencoder can learn to interpolate the missing data\n"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 139,
+   "execution_count": 176,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -43,7 +73,7 @@
     "    self.seismic_1 = resample(self.seismic_1, 800)\n",
     "    self.seismic_2 = numpy.load('./data/seismic/seismic_2.npy')\n",
     "    self.seismic_2 = resample(self.seismic_2, 800)\n",
-    "    self.batch_length = 64\n",
+    "    self.batch_length = 1024\n",
     "    \n",
     "  def _f(self, x):\n",
     "    return -numpy.cos(x*math.pi)/2.+0.5\n",
@@ -102,6 +132,14 @@
    "metadata": {},
    "source": [
     "## The seismic data"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Here we plot the seismic data that is used for training and testing. Both are 800 pixels long and between 200 and 229 pixels wide. Both\n",
+    "samples are different lines at the opposite sides a one and the same seismic survey. "
    ]
   },
   {
@@ -940,6 +978,13 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As explained above the VAE is fed with squares of 28x28 pixels. The batches are generated from these tiles"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 33,
    "metadata": {},
@@ -1748,6 +1793,13 @@
     "    plt.imshow(batch.get_target()[idx][0], cmap=\"gray\")\n",
     "    \n",
     "#plt.pcolormesh(im, cmap=\"gray\")#"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The same tiles as before with chunks cut out for interpolation"
    ]
   },
   {
@@ -3490,12 +3542,11 @@
     "win *= ty\n",
     "\n",
     "im_ =  util.seismic_2\n",
-    "#im_[:,140-4:140+5]=0\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
     "plt.figure(figsize=(10,7))\n",
     "arr = numpy.zeros(im_.shape)\n",
-    "#%matplotlib notebook\n",
+    "%matplotlib notebook\n",
     "plt.gca().invert_yaxis()\n",
     "for i in numpy.arange(0,800-28,14):\n",
     "    for j in numpy.arange(0,229-28,14):\n",
@@ -6040,13 +6091,6 @@
     "plt.gca().invert_yaxis()\n",
     "plt.pcolormesh(im_[0:798,0:196], cmap=\"gray\")"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
