--- a/MNIST.ipynb
+++ b/MNIST.ipynb
@@ -11,7 +11,20 @@
    "cell_type": "code",
    "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Downloading http://yann.lecun.com/exdb/mnist/train-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/train-labels-idx1-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-images-idx3-ubyte.gz\n",
+      "Downloading http://yann.lecun.com/exdb/mnist/t10k-labels-idx1-ubyte.gz\n",
+      "Processing...\n",
+      "Done!\n"
+     ]
+    }
+   ],
    "source": [
     "import codes.VAE as VAE\n",
     "import torch\n",
@@ -20,7 +33,7 @@
     "import torch.optim as optim\n",
     "from torch.autograd import Variable\n",
     "\n",
-    "training_batches, test_batches = VAE.VariationalAutoEncoder.get_MNIST_train_loader()\n",
+    "training_batches, test_batches = VAE.VariationalAutoEncoder.get_FashionMNIST_train_loader()\n",
     "\n",
     "vaes = []\n",
     "for i in [2,4,6,8,10]:\n",
